--- a/src/styles/views/Starscape.scss
+++ b/src/styles/views/Starscape.scss
@@ -1,11 +1,11 @@
 @import "../theme";
 
  .starscape {
-    overflow: hidden;
     top: 0%;
     left: 0%;
     position: absolute;
     z-index: -1;
-    width: fit-content;
-    height: fit-content;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
  }
